# backend/src/modules/upload/upload.controller.ts
@@ -1,13 +1,14 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete, UseInterceptors, UploadedFiles, UploadedFile, UseGuards, Req } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, UseInterceptors, UploadedFile, UseGuards, UseFilters } from '@nestjs/common';
 import { UploadService } from './upload.service';
 import { CreateUploadDto } from './dto/create-upload.dto';
 import { UpdateUploadDto } from './dto/update-upload.dto';
 import { FileInterceptor } from '@nestjs/platform-express';
-import { ApiBody, ApiCreatedResponse, ApiOperation } from '@nestjs/swagger';
+import { ApiBody, ApiCreatedResponse, ApiOperation, ApiResponse } from '@nestjs/swagger';
 import { JwtAuthGuard } from '../auth/guards/jwt-auth-guard';
-import type { Request } from 'express';
 import { GetUser } from '../auth/decorators/current-user.decorator';
 import { User } from '@/generated/prisma/client';
+import { UploadResponseDto } from './dto/upload-response.dto';
+import { MulterUploadExceptionFilter } from './multer-upload.exception-filter';
 
 @UseGuards(JwtAuthGuard)
 @Controller('upload')
@@ -18,7 +19,9 @@ export class UploadController {
   @ApiOperation({ summary: 'Upload a file' })
   @ApiBody({ type: CreateUploadDto })
   @ApiCreatedResponse({ description: 'File uploaded successfully' })
+  @ApiResponse({ type: UploadResponseDto })
   @Post('/file')
+  @UseFilters(MulterUploadExceptionFilter)
   @UseInterceptors(FileInterceptor('file'))
   create(
     @Body() createUploadDto: CreateUploadDto,
